# koverage

./: .dockerignore  .env.example  .gitignore  .prettierignore  .prettierrc.json  DEMO_RECORDING.md  Dockerfile  LICENSE  NOTICE  PLAN.md  README.md  help.md  pyproject.toml
beacon/: README.md  alembic.ini  pyproject.toml
beacon/alembic/: env.py
beacon/alembic/versions/: 0001_initial.py
beacon/beacon/: __init__.py  bus.py  logging_config.py  settings.py
beacon/beacon/db/: __init__.py  base.py  init.py  models.py
beacon/beacon/gateway/: chat.py  conversations.py  main.py  obs.py  read.py
beacon/beacon/ingestion/: main.py
beacon/beacon/worker/: main.py
beacon/docs/: ARCHITECTURE.md
beacon/llmobs/: redaction.py
beacon/tests/: test_ingestion_hardening.py  test_logging_json.py  test_redaction.py  test_sdk_client.py  test_tracer.py  test_worker_unit.py
core/: pyproject.toml
core/llmcore/: __init__.py  assistant.py  catalog.py  config.py  guardrails.py  memory.py  pricing.py  tools.py  types.py
core/llmcore/providers/: __init__.py  hf_space.py  modal_oss.py  openai_compatible.py  router.py
core/tests/: test_core.py
deploy/: docker-compose.yml  nginx.conf
deploy/k8s/: gateway.yaml  ingestion.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  secrets.yaml  web.yaml  worker.yaml
docs/: oss-deployment.md
docs/adr/: 0000-unified-architecture.md
hf-space/: README.md  app.py  requirements.txt
llmobs/: pyproject.toml
llmobs/llmobs/: __init__.py  client.py  config.py  redaction.py  schema.py  tracer.py
modal-app/: README.md  qwen_app.py
third_party_licenses/: BSD-2-Clause_TensorTrust.txt  CC-BY-4.0.txt  MIT_HaluEval.txt  MIT_MedMCQA.txt
underwriter/: README.md  pyproject.toml
underwriter/docs/: BBQ_BIAS_BUILD.md  FLAGSHIP_RESULT.md  METHODOLOGY.md  METRICS_EXPLAINED.md  N_SUITE_EXPANSION_STATUS.md  REDTEAM_LANDSCAPE.md  SUITE_EXPANSION.md
underwriter/scripts/: _common.py  build_bbq_bias.py  build_discrimeval_bias.py  build_halueval_factual.py  build_medmcqa_factual.py  build_orbench_safety.py  build_synthetic_pii_sensitive.py  build_tensortrust_sensitive.py
underwriter/tests/: test_scoring.py
underwriter/underwriter/: __init__.py  cli.py  config.py  guardrails.py  report.py  results.py  runner.py
underwriter/underwriter/datasets/: __init__.py
underwriter/underwriter/datasets/suites/: SUITES_MANIFEST.json  bias.yaml  bias_bbq.yaml  bias_discrimeval.yaml  factual.yaml  factual_halueval.yaml  factual_medmcqa.yaml  jailbreak.yaml  jailbreak_orbench.yaml  sensitive.yaml  sensitive_synthetic_pii.yaml  sensitive_tensortrust.yaml
underwriter/underwriter/scoring/: __init__.py  aggregate.py  combine.py  deterministic.py  fairness.py  judge.py  rubrics.py
underwriter/underwriter/templates/: scorecard.css  scorecard.html
web/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: eval-scorecard.json
web/src/: App.tsx  index.css  store.tsx  types.ts
web/src/api/: client.ts
web/src/components/: ChatView.tsx  Dashboard.tsx  EvaluationView.tsx  MessageBubble.tsx  ModelSelector.tsx  Sidebar.tsx  TracePanel.tsx
web/src/lib/: sse.ts
