# Workspace root for the Koverage platform monorepo.
# Members are installed editable into one venv; `uv run pytest` covers them all.
[project]
name = "koverage-platform"
version = "0.0.0"
description = "Koverage: Beacon (LLM observability) + Underwriter (LLM evaluation) on a shared core"
requires-python = ">=3.11"
dependencies = ["llmcore", "llmobs", "beacon", "underwriter"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "llmobs", "beacon", "underwriter"]

[tool.uv.sources]
llmcore = { workspace = true }
llmobs = { workspace = true }
beacon = { workspace = true }
underwriter = { workspace = true }

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "pyright>=1.1"]

[tool.pytest.ini_options]
testpaths = ["core/tests", "beacon/tests", "underwriter/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
include = ["core/llmcore", "llmobs/llmobs", "beacon/beacon", "underwriter/underwriter"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = false
