[project]
name = "beacon"
version = "0.1.0"
description = "Beacon — drop-in LLM observability: SDK + ingestion + worker + gateway"
requires-python = ">=3.11"
dependencies = [
    "llmcore",
    "llmobs",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "aiokafka>=0.11",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beacon"]

[tool.uv.sources]
llmcore = { workspace = true }
llmobs = { workspace = true }
