[project]
name = "llmobs"
version = "0.1.0"
description = "Drop-in LLM observability SDK: capture + PII redaction + non-blocking ingest"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmobs"]
